bk_ida/gobmkida/c0/safe_move
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/safe_move/src/engine/reading.c:5001:7: error: use of undeclared identifier 'safe_move_initialized'
if ( !safe_move_initialized ) 
      ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/safe_move/src/engine/reading.c:5004:1: error: use of undeclared identifier 'safe_move_initialized'
safe_move_initialized = 1; 
^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/safe_move/src/obj/1/reading.o] Error 1
